<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="agentsDomain"
            type="com.kz.valocheck.domain.AgentsDomain" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/agent_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/portrait_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/agent_fullportrait"
                            android:layout_width="228dp"
                            android:layout_height="368dp"
                            android:scaleType="fitCenter"
                            app:imageResource="@{agentsDomain.portrait}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0"
                            tools:src="@drawable/agent_fullportrait" />

                        <TextView
                            android:id="@+id/agent_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:fontFamily="monospace"
                            android:text="@{agentsDomain.name}"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textSize="48sp"
                            android:textStyle="bold"
                            android:typeface="normal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/agent_fullportrait"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/agent_fullportrait"
                            tools:text="@string/jett_profile_name" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/role_card"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            app:cardBackgroundColor="@color/cardview_dark_background"
                            app:cardCornerRadius="30dp"
                            app:cardElevation="10dp"
                            app:layout_constraintEnd_toEndOf="@+id/agent_name"
                            app:layout_constraintStart_toStartOf="@+id/agent_name"
                            app:layout_constraintTop_toBottomOf="@+id/agent_name">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:id="@+id/agent_role_image"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    app:imageResource="@{agentsDomain.role.icon}"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toStartOf="@+id/agent_role_text"
                                    app:layout_constraintHorizontal_bias="0.5"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:srcCompat="@drawable/agent_role_displayicon" />

                                <TextView
                                    android:id="@+id/agent_role_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="30dp"
                                    android:gravity="center_vertical"
                                    android:text="@{agentsDomain.role.name}"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                    android:textColor="#FFFFFF"
                                    android:textSize="18sp"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_bias="0.5"
                                    app:layout_constraintStart_toEndOf="@+id/agent_role_image"
                                    app:layout_constraintTop_toTopOf="@+id/agent_role_image"
                                    tools:text="@string/agent_role_name" />

                            </androidx.constraintlayout.widget.ConstraintLayout>


                        </androidx.cardview.widget.CardView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/biography_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/portrait_card">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/agent_bio_title_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/agent_biography_name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <TextView
                            android:id="@+id/agent_biography_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@{agentsDomain.description}"
                            android:textAlignment="textStart"
                            tools:text="@string/agent_biography" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/ability_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/ability_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/biography_card" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ability_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:itemCount="4"
                    tools:listitem="@layout/ability_list"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ability_title_text" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>